2003-09-11  Pavel Roskin  <proski@gnu.org>

	* boxes.c (symlink_dialog): Add "OK" and "Cancel" buttons.
	Don't translate strings, it's done in quick_dialog().
	Reported by Ali Akcaagac <aliakc@web.de>

2003-09-10  Pavel Roskin  <proski@gnu.org>

	* dlg.h: Remove "last" field from Dlg_head, it's unneeded in a
	circularly linked list.

	* screen.c (paint_dir): Don't make panel clean here.
	(panel_update_contents): Do it here.
	(panel_callback): Repaint the panel on focus.
	(select_item): Don't paint anything here.

	* dlg.h (send_message): Use cb_ret_t and widget_msg_t.

	* main.c (menu_cmd): If the current panel is inactive, use the
	opposite side to start menu.

	* dlg.h: Use cb_ret_t and widget_msg_t in widget callbacks.
	Massive adjustment for the above.

	* chmod.c (chmod_toggle_select): Get id as argument.

	* dlg.h: Remove restroy callback.  Widgets should use
	WIDGET_DESTROY.  Adjust all dependencies.

	* dlg.c: Don't supply ID of the current widget with any
	callbacks.  It's mostly useless and can be found by the
	callback.
	* layout.c: Likewise.
	* widget.c: Likewise.
	* chmod.c (chmod_callback): Adjust for the above.

	* layout.c (layout_change): Make static.
	* screen.c (paint_panel): Likewise.
	* cmd.c (dirsizes_cmd): Use dirty flag.
	* tree.c (chdir_sel): Don't call paint_panel().

	* find.c: Remove useless calls to paint_panel().
	* panelize.c: Likewise.

	* screen.c (use_display_format): Set dirty flag.  Remove calls
	to paint_panel() where they become unneeded.

	* screen.c (file_mark): Set dirty flag if the mark changes.
	* cmd.c: Remove calls to paint_panel() due to file marks.

	* screen.c (update_dirty_panels): New function - update panels
	with the dirty flag.
	(panel_update_contents): Make static, don't call directly.
	* main.c: Don't call panel_update_contents(), use dirty flag.
	(midnight_callback): Call update_dirty_panels().

2003-09-09  Pavel Roskin  <proski@gnu.org>

	* find.c (find_parameters): Make "filename" entry focused on